--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "typescript": "^4.0.3"
   },
   "dependencies": {
+    "caller-path": "^3.0.0",
     "require-resolve-hook": "^1.0.1",
     "resolve-from": "^5.0.0"
   }
